--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -13,7 +13,16 @@
     "confirmPassword": "पासवर्ड की पुष्टि कीजिये",
     "forgotPassword": "पासवर्ड भूल गए ?",
     "enterEmail": "ईमेल दर्ज करें",
-    "enterPassword": "पास वर्ड दर्ज करें"
+    "enterPassword": "पास वर्ड दर्ज करें",
+    "toastError1": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रही है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।",
+    "toastError2": "कैप्चा त्रुटि!",
+    "toastError3": "कृपया, कैप्चा जांचें।",
+    "toastError4": "कुछ गलत हो गया, कृपया कुछ देर बाद प्रयास करें।",
+    "toastError5": "पासवर्ड और पुष्टि पासवर्ड मेल नहीं खाते।",
+    "toastError6": "सभी विवरण सही से भरें।",
+    "toastError7": "क्षमा करें! आप अधिकृत नहीं हैं!",
+    "toastError8": "सदस्य नहीं मिला!",
+    "toastSuccess1": "सफलतापूर्वक पंजीकृत। कृपया स्वीकृत होने तक प्रतीक्षा करें।"
   },
   "listNavbar": {
     "talawa_portal": "तलावा पोर्टल",
@@ -35,7 +44,9 @@
     "isPublic": "सार्वजनिक है",
     "visibleInSearch": "खोज में दृश्यमान",
     "displayImage": "प्रदर्शन छवि",
-    "enterName": "नाम दर्ज करें"
+    "enterName": "नाम दर्ज करें",
+    "toastSuccess": "बधाई हो संगठन बनाया गया है",
+    "toastError": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   },
   "superDashListCard": {
     "created": "बनाया था",
@@ -57,7 +68,9 @@
     "admin": "व्यवस्थापक",
     "superAdmin": "सुपरएडमिन",
     "user": "उपयोगकर्ता",
-    "enterName": "नाम दर्ज करें"
+    "enterName": "नाम दर्ज करें",
+    "toastRoleUpdate": "भूमिका अपडेट की गई।",
+    "toastError": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   },
   "requests": {
     "title": "तलवा अनुरोध",
@@ -67,7 +80,10 @@
     "email": "ईमेल",
     "accept": "स्वीकार करना",
     "reject": "अस्वीकार",
-    "enterName": "नाम दर्ज करें"
+    "enterName": "नाम दर्ज करें",
+    "toastSuccess1": "उपयोगकर्ता स्वीकृत",
+    "toastSuccess2": "उपयोगकर्ता अस्वीकृत",
+    "toastError": "तलवा-एपीआई सेवा अनुपलब्ध है। क्या यह चल रही है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   },
   "adminNavbar": {
     "talawa_portal": "तलावा पोर्टल",
@@ -88,7 +104,8 @@
     "spamsThe": "स्पैम द",
     "group": "समूह",
     "noNotifications": "कोई सूचनाएं नहीं",
-    "close": "बंद करना"
+    "close": "बंद करना",
+    "toastError": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   },
   "dashboard": {
     "title": "तलावा डैशबोर्ड",
@@ -105,7 +122,8 @@
     "deleteOrganization": "संगठन हटाएं",
     "deleteMsg": "क्या आप इस संगठन को हटाना चाहते हैं?",
     "no": "नहीं",
-    "yes": "हाँ"
+    "yes": "हाँ",
+    "toastError": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   },
   "organizationPeople": {
     "title": "तलावा सदस्य",
@@ -120,7 +138,9 @@
   },
   "userListCard": {
     "joined": "में शामिल हो गए",
-    "addAdmin": "व्यवस्थापक जोड़ें"
+    "addAdmin": "व्यवस्थापक जोड़ें",
+    "toastSuccess": "उपयोगकर्ता को व्यवस्थापक के रूप में जोड़ा गया है।",
+    "toastError": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   },
   "orgAdminListCard": {
     "joined": "में शामिल हो गए",
@@ -128,7 +148,9 @@
     "removeAdmin": "व्यवस्थापक हटाएं",
     "removeAdminMsg": "क्या आप इस व्यवस्थापक को हटाना चाहते हैं?",
     "no": "नहीं",
-    "yes": "हाँ"
+    "yes": "हाँ",
+    "toastSuccess": "व्यवस्थापक को हटा दिया गया है।",
+    "toastError": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   },
   "orgPeopleListCard": {
     "joined": "में शामिल हो गए",
@@ -136,7 +158,9 @@
     "removeMember": "सदस्य निकालें",
     "removeMemberMsg": "क्या आप इस सदस्य को हटाना चाहते हैं?",
     "no": "नहीं",
-    "yes": "हाँ"
+    "yes": "हाँ",
+    "toastSuccess": "सदस्य को हटा दिया गया है",
+    "toastError": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   },
   "organizationEvents": {
     "title": "तलावा इवेंट्स",
@@ -161,7 +185,9 @@
     "enterFilter": "फ़िल्टर दर्ज करें",
     "enterTitle": "शीर्षक दर्ज करें",
     "enterDescrip": "विवरण दर्ज करें",
-    "eventLocation": "स्थान दर्ज करें"
+    "eventLocation": "स्थान दर्ज करें",
+    "toastSuccess": "बधाई हो! इवेंट बनाया गया है।",
+    "toastError": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   },
   "eventListCard": {
     "location": "स्थान",
@@ -181,7 +207,10 @@
     "isPublic": "सार्वजनिक है",
     "isRegistrable": "पंजीकरण योग्य है",
     "close": "बंद करना",
-    "updatePost": "अपडेट पोस्ट"
+    "updatePost": "अपडेट पोस्ट",
+    "toastSuccess1": "इवेंट सफलतापूर्वक मिटाया गया.",
+    "toastSuccess2": "इवेंट सफलतापूर्वक अपडेट किया गया।",
+    "toastError": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   },
   "orgPost": {
     "title": "तलावा पोस्ट",
@@ -198,7 +227,9 @@
     "searchTitle": "शीर्षक से खोजें",
     "searchText": "पाठ द्वारा खोजें",
     "ptitle": "शीर्षक पोस्ट करें",
-    "postDes": "आपको किस बारे में बात करनी है?"
+    "postDes": "आपको किस बारे में बात करनी है?",
+    "toastSuccess": "बधाई हो! आपने कुछ पोस्ट किया है।",
+    "toastError": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   },
   "orgPostCard": {
     "author": "लेखक",
@@ -214,7 +245,10 @@
     "image": "छवि",
     "video": "वीडियो",
     "close": "बंद करना",
-    "updatePost": "अपडेट पोस्ट"
+    "updatePost": "अपडेट पोस्ट",
+    "toastSuccess1": "पोस्ट सफलतापूर्वक हटाई गई।",
+    "toastSuccess2": "पोस्ट सफलतापूर्वक अपडेट किया गया।",
+    "toastError": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   },
   "blockUnblockUser": {
     "title": "तलावा ब्लॉक/अनब्लॉक यूजर",
@@ -225,7 +259,10 @@
     "block_unblock": "ब्लॉक/अनब्लॉक करें",
     "unblock": "अनब्लॉक करें",
     "block": "अवरोध पैदा करना",
-    "orgName": "नाम दर्ज करें"
+    "orgName": "नाम दर्ज करें",
+    "toastSuccess1": "उपयोगकर्ता को सफलतापूर्वक अवरोधित किया गया",
+    "toastSuccess2": "उपयोगकर्ता अन-ब्लॉक किया गया सफलतापूर्वक",
+    "toastError": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   },
   "forgotPassword": {
     "title": "तलवा पासवर्ड भूल गए",
@@ -287,24 +324,29 @@
     "superAdmin": "सुपरएडमिन",
     "displayImage": "प्रदर्शन छवि",
     "saveChanges": "परिवर्तनों को सुरक्षित करें",
-    "cancel": "रद्द करना"
+    "cancel": "रद्द करना",
+    "toastSuccess": "सफल अपडेट किया गया",
+    "toastError": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   },
-
   "userPasswordUpdate": {
     "previousPassword": "पिछला पासवर्ड",
     "newPassword": "नया पासवर्ड",
     "confirmNewPassword": "नए पासवर्ड की पुष्टि करें",
     "saveChanges": "परिवर्तनों को सुरक्षित करें",
-    "cancel": "रद्द करना"
+    "cancel": "रद्द करना",
+    "toastError1": "पासवर्ड फ़ील्ड खाली नहीं हो सकता।",
+    "toastError2": "नया और पुष्टि पासवर्ड मेल नहीं खाते।",
+    "toastSuccess": "सफल अपडेट किया गया"
   },
-
   "orgDelete": {
     "deleteOrg": "संगठन हटाएं"
   },
   "membershipRequest": {
     "joined": "में शामिल हो गए",
     "accept": "स्वीकार करना",
-    "reject": "अस्वीकार"
+    "reject": "अस्वीकार",
+    "toastSuccess": "यह स्वीकार किया जाता है",
+    "toastError": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   },
   "orgUpdate": {
     "name": "नाम",
@@ -315,7 +357,9 @@
     "isRegistrable": "पंजीकरण योग्य है",
     "saveChanges": "परिवर्तनों को सुरक्षित करें",
     "cancel": "रद्द करना",
-    "enterNameOrganization": "संगठन का नाम दर्ज करें"
+    "enterNameOrganization": "संगठन का नाम दर्ज करें",
+    "toastSuccess": "सफल अपडेट किया गया",
+    "toastError": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   },
   "addOnRegister": {
     "addNew": "नया जोड़ो",
@@ -327,7 +371,8 @@
     "register": "पंजीकरण करवाना",
     "pName": "जैसे: दान",
     "cName": "जैसे: जॉन डो",
-    "pDesc": "यह प्लगइन यूआई को सक्षम बनाता है"
+    "pDesc": "यह प्लगइन यूआई को सक्षम बनाता है",
+    "toastSuccess": "प्लगइन सफलतापूर्वक जोड़ा गया"
   },
   "addOnStore": {
     "searchName": "जैसे: दान",
@@ -364,6 +409,8 @@
     "created": "बनाया गया",
     "adminForOrganizations": "संगठनों के लिए व्यवस्थापक",
     "membershipRequests": "सदस्यता अनुरोध",
-    "adminForEvents": "घटनाओं के लिए व्यवस्थापक"
+    "adminForEvents": "घटनाओं के लिए व्यवस्थापक",
+    "toastSuccess": "उपयोगकर्ता को व्यवस्थापक के रूप में जोड़ा गया है।",
+    "toastError": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   }
 }
