created a reusable postNotFound Component with responsive UI (#717)
* created a reusable postNotFound Component with responsive UI

* run test error solved

* added translation to the component and also created the test.tsx for the error component

* fixed the failing test and added the postNotFound reusable component for OrgList

---------

Co-authored-by: thesaaddevloper <thesaaddeveloper@gmail.com>

--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -201,6 +201,13 @@
     "ptitle": "शीर्षक पोस्ट करें",
     "postDes": "आपको किस बारे में बात करनी है?"
   },
+  "postNotFound": {
+    "post": "पोस्ट",
+    "not found!": "नहीं मिला!",
+    "organization": "संगठन",
+    "post not found!": "पोस्ट नहीं मिला!",
+    "organization not found!": "संगठन नहीं मिला!"
+  },
   "orgPostCard": {
     "author": "लेखक",
     "imageURL": "छवि यूआरएल",
