--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -14,7 +14,15 @@
     "forgotPassword": "Forgot Password ?",
     "enterEmail": "Enter Email",
     "enterPassword": "Enter Password",
-    "doNotOwnAnAccount": "Do not own an account?"
+    "toastError1": "Talawa-API service is unavailable. Is it running? Check your network connectivity too.",
+    "toastError2": "Captcha Error!",
+    "toastError3": "Please, check the captcha.",
+    "toastError4": "Something went wrong, Please try after sometime.",
+    "toastError5": "Password and Confirm password mismatches.",
+    "toastError6": "Fill all the Details Correctly.",
+    "toastError7": "Sorry! you are not Authorised!",
+    "toastError8": "User not found!",
+    "toastSuccess1":"Successfully Registered. Please wait until you will be approved."
   },
   "listNavbar": {
     "talawa_portal": "Talawa Portal",
@@ -36,7 +44,9 @@
     "isPublic": "Is Public",
     "visibleInSearch": "Visible In Search",
     "displayImage": "Display Image",
-    "enterName": "Enter Name"
+    "enterName": "Enter Name",
+    "toastSuccess": "Congratulation the Organization is created",
+    "toastError": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
   "superDashListCard": {
     "created": "Created",
@@ -58,7 +68,9 @@
     "admin": "ADMIN",
     "superAdmin": "SUPERADMIN",
     "user": "USER",
-    "enterName": "Enter Name"
+    "enterName": "Enter Name",
+    "toastRoleUpdate": "Role Updated.",
+    "toastError": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
   "requests": {
     "title": "Talawa Requests",
@@ -68,7 +80,10 @@
     "email": "Email",
     "accept": "Accept",
     "reject": "Reject",
-    "enterName": "Enter Name"
+    "enterName": "Enter Name",
+    "toastSuccess1": "User Approved",
+    "toastSuccess2": "User Rejected",
+    "toastError":"Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
   "adminNavbar": {
     "talawa_portal": "Talawa Portal",
@@ -89,7 +104,8 @@
     "spamsThe": "spams the",
     "group": "group",
     "noNotifications": "No Notifications",
-    "close": "Close"
+    "close": "Close",
+    "toastError": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
   "dashboard": {
     "title": "Talawa Dashboard",
@@ -106,7 +122,8 @@
     "deleteOrganization": "Delete Organization",
     "deleteMsg": "Do you want to delete this organization?",
     "no": "No",
-    "yes": "Yes"
+    "yes": "Yes",
+    "toastError": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
   "organizationPeople": {
     "title": "Talawa Members",
@@ -121,7 +138,9 @@
   },
   "userListCard": {
     "joined": "Joined",
-    "addAdmin": "Add Admin"
+    "addAdmin": "Add Admin",
+    "toastSuccess": "User is added as admin.",
+    "toastError": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
   "orgAdminListCard": {
     "joined": "Joined",
@@ -129,7 +148,9 @@
     "removeAdmin": "Remove Admin",
     "removeAdminMsg": "Do you want to remove this admin?",
     "no": "No",
-    "yes": "Yes"
+    "yes": "Yes",
+    "toastSuccess": "The admin is removed.",
+    "toastError": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
   "orgPeopleListCard": {
     "joined": "Joined",
@@ -137,7 +158,9 @@
     "removeMember": "Remove Member",
     "removeMemberMsg": "Do you want to remove this member?",
     "no": "No",
-    "yes": "Yes"
+    "yes": "Yes",
+    "toastSuccess": "The Member is removed",
+    "toastError": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
   "organizationEvents": {
     "title": "Talawa Events",
@@ -162,7 +185,9 @@
     "enterFilter": "Enter Filter",
     "enterTitle": "Enter Title",
     "enterDescrip": "Enter Description",
-    "eventLocation": "Enter Location"
+    "eventLocation": "Enter Location",
+    "toastSuccess": "Congratulations! The Event is created.",
+    "toastError": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
   "eventListCard": {
     "location": "Location",
@@ -182,7 +207,10 @@
     "isPublic": "Is Public",
     "isRegistrable": "Is Registrable",
     "close": "Close",
-    "updatePost": "Update Post"
+    "updatePost": "Update Post",
+    "toastSuccess1": "Event deleted successfully.",
+    "toastSuccess2": "Event updated successfully.",
+    "toastError": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
   "orgPost": {
     "title": "Talawa Posts",
@@ -199,14 +227,9 @@
     "searchTitle": "Search By Title",
     "searchText": "Search By Text",
     "ptitle": "Post Title",
-    "postDes": "What do you to talk about?"
-  },
-  "postNotFound": {
-    "post": "Post",
-    "not found!": "Not Found!",
-    "organization": "Organization",
-    "post not found!": "Post Not Found!",
-    "organization not found!": "Organization Not Found!"
+    "postDes": "What do you to talk about?",
+    "toastSuccess": "Congratulations! You have Posted Something.",
+    "toastError": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
   "orgPostCard": {
     "author": "Author",
@@ -222,7 +245,10 @@
     "image": "Image",
     "video": "Video",
     "close": "Close",
-    "updatePost": "Update Post"
+    "updatePost": "Update Post",
+    "toastSuccess1": "Post deleted successfully.",
+    "toastSuccess2": "Post Updated successfully.",
+    "toastError": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
   "blockUnblockUser": {
     "title": "Talawa Block/Unblock User",
@@ -233,7 +259,10 @@
     "block_unblock": "Block/Unblock",
     "unblock": "UnBlock",
     "block": "Block",
-    "orgName": "Enter Name"
+    "orgName": "Enter Name",
+    "toastSuccess1": "User blocked successfully",
+    "toastSuccess2": "User Un-Blocked successfully",
+    "toastError": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
   "forgotPassword": {
     "title": "Talawa Forgot Password",
@@ -246,7 +275,13 @@
     "changePassword": "Change Password",
     "backToHome": "Back to Home",
     "userOtp": "e.g. 12345",
-    "password": "Password"
+    "password": "Password",
+    "toastError1": "Email is not registered.",
+    "toastError2": "Talawa-API service is unavailable. Is it running? Check your network connectivity too.",
+    "toastError3": "Error in sending mail.",
+    "toastError4": "Password and Confirm password mismatches.",
+    "toastError5": "Password changes successfully.",
+    "toastSuccess1":"OTP is sent to your registered email."
   },
   "pageNotFound": {
     "title": "404 Not Found",
@@ -295,7 +330,9 @@
     "superAdmin": "Superadmin",
     "displayImage": "Display Image",
     "saveChanges": "Save Changes",
-    "cancel": "Cancel"
+    "cancel": "Cancel",
+    "toastSuccess": "Successful updated",
+    "toastError": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
 
   "userPasswordUpdate": {
@@ -303,7 +340,10 @@
     "newPassword": "New Password",
     "confirmNewPassword": "Confirm New Password",
     "saveChanges": "Save Changes",
-    "cancel": "Cancel"
+    "cancel": "Cancel",
+    "toastError1": "The password field cannot be empty.",
+    "toastError2": "New and Confirm password do not match.",
+    "toastSuccess": "Successful updated"
   },
 
   "orgDelete": {
@@ -312,7 +352,9 @@
   "membershipRequest": {
     "joined": "Joined",
     "accept": "Accept",
-    "reject": "Reject"
+    "reject": "Reject",
+    "toastSuccess": "it is accepted",
+    "toastError": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
   "orgUpdate": {
     "name": "Name",
@@ -323,7 +365,9 @@
     "isRegistrable": "Is Registrable",
     "saveChanges": "Save Changes",
     "cancel": "Cancel",
-    "enterNameOrganization": "Enter Organization Name"
+    "enterNameOrganization": "Enter Organization Name",
+    "toastSuccess": "Successful updated",
+    "toastError": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
   "addOnRegister": {
     "addNew": "Add New",
@@ -335,7 +379,8 @@
     "register": "Register",
     "pName": "Ex: Donations",
     "cName": "Ex: john Doe",
-    "pDesc": "This Plugin enables UI for"
+    "pDesc": "This Plugin enables UI for",
+    "toastSuccess": "Plugin Added Successfully"
   },
   "addOnStore": {
     "searchName": "Ex: Donations",
@@ -372,6 +417,8 @@
     "created": "Created",
     "adminForOrganizations": "Admin for organizations",
     "membershipRequests": "Membership requests",
-    "adminForEvents": "Admin for events"
+    "adminForEvents": "Admin for events",
+    "toastSuccess": "User is added as admin.",
+    "toastError": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   }
 }
