--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -193,7 +193,7 @@
     "postDetails": "Post Details",
     "postTitle": "Title",
     "information": "Information",
-    "image": "Image",
+    "image": "Post Image",
     "video": "Video",
     "addPost": "Add Post",
     "searchTitle": "Search By Title",
