--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -109,6 +109,7 @@
     "membershipRequests": "Membership Requests",
     "deleteOrganization": "Delete Organization",
     "deleteMsg": "Do you want to delete this organization?",
+    "confirmDeleteText": "Please type <bold>{{orgName}}</bold> to confirm",
     "no": "No",
     "yes": "Yes"
   },
